ckeditor position OK

--- a/ckeditor5/sample/index.html
+++ b/ckeditor5/sample/index.html
@@ -33,7 +33,7 @@
 			<div class="row row-editor">
 				<div class="editor" placeholder="hi">
 				</div>
-			</div></div>
+			</div>
 		</div>
 	</main>
 	<footer>
